# c_transportadora

./: .gitignore  README.md  meson.build
src/: main.c
src/Clientes/: clientes.c  clientes.h
src/Devolucao/: devolucao.c  devolucao.h  meson.build
src/RotaEntrega/: rotaEntrega.h
src/RotaNaoEfetuada/: rotaNaoEfetuda.h
src/Rotas/: meson.build
src/Rotas/RotaEntrega/: meson.build  rota_entrega.c  rota_entrega.h
src/Rotas/RotaNaoEfetuada/: meson.build  rota_nao_efetuada.c  rota_nao_efetuada.h
src/Score/: meson.build  score.c  score.h
src/app/Clientes/: clientes.c  clientes.h  meson.build
src/app/Entrega/: meson.build
src/app/Entrega/ClientesEntrega/: clientes_entrega.c  clientes_entrega.h  meson.build
src/app/Entrega/DevolucaoEntrega/: devolucao_entrega.c  devolucao_entrega.h  meson.build
src/app/Entrega/Historico/: historico.c  historico.h  meson.build
src/app/Entrega/Menu/: menu.c  menu.h  meson.build
src/app/Entrega/Pacote/: meson.build  pacote.c  pacote.h
src/app/Entrega/PrintStruct/: meson.build  print_struct.c  print_struct.h
src/app/Entrega/RotaEntrega/: meson.build  rota_entrega.c  rota_entrega.h
src/app/Entrega/RotaSegundaEntrega/: meson.build  rota_segunda_entrega.c  rota_segunda_entrega.h
src/app/Entrega/Score/: meson.build  score.c  score.h
src/app/Entrega/StructEntrega/: meson.build  struct_info_entrega.h  struct_rotas_entrega.h
src/app/Score/: score.h
src/app/utils/: meson.build  utils.c  utils.h
src/tests/: meson.build
src/tests/Entrega/RotaEntrega/: 1_criarFilaRota.c  2_creatRota.c  3_inserirRota.c  4_listarRotas.c  5_editarRota.c  6_retornarRota.c  7_finalizarRota.c  criarFilaRota.c  editarRota.c  finalizarRota.c  inserirRota.c  meson.build  retornarRota.c
src/tests/test_utils/: meson.build  utils.c  utils.h
