inc_struct_entrega = include_directories('StructEntrega')
inc_menu = include_directories('Menu')
inc_print_struct = include_directories('PrintStruct')
inc_cliente_entrega = include_directories('ClientesEntrega')
inc_rota_entrega = include_directories('RotaEntrega')
inc_rota_segunda_entrega = include_directories('RotaSegundaEntrega')
inc_devolucao_entrega = include_directories('DevolucaoEntrega')
inc_score = include_directories('Score')

subdir('PrintStruct')
subdir('ClientesEntrega')
subdir('RotaEntrega')
subdir('RotaSegundaEntrega')
subdir('DevolucaoEntrega')
subdir('Score')
subdir('Menu')

inc_entrega = [
  inc_print_struct,
  inc_cliente_entrega,
  inc_rota_entrega,
  inc_rota_segunda_entrega,
  inc_devolucao_entrega,
  inc_struct_entrega,
  inc_score,
  inc_menu,
]

lib_entrega = [
  lib_print_struct,
  lib_cliente_entrega,
  lib_rota_entrega,
  lib_rota_segunda_entrega,
  lib_devolucao_entrega,
  lib_score,
  lib_menu,
]